tests/errors/phantom-reuse.expect
---CODE---
1
---STDERR---
error: Reuses instance uses phantom event for scheduling
  ┌─ tests/errors/phantom-reuse.fil:9:13
  │
3 │ comp main<G: 2>(
  │           - Event is a phantom event
  ·
8 │     a0 := A<G>(left, left);
  │           - Previous use
9 │     a1 := A<G+1>(right, right);
  │             ^ Invocation uses phantom event
  │
  = Phantom ports are compiled away and cannot be used for resource sharing

